app/app.css
/* app css stylesheet */

nav{
  margin-bottom: 20px;

}

.navbar-item{
  color: green;
}

.navbar-brand{
  margin-top: 5px;
}

.navbar-brand img{
  height: 50px;
}

.profile-sidebar {
	background-color: #363636;
	text-align: center;
}

.profile-task-area {
	background-color: #D5D7D2;
}

